build/xtask/tests/snapshots/i2c_codegen__app_observer_rev-a-dev.toml.devices-Sensors.snap
---
source: build/xtask/tests/i2c-codegen.rs
expression: contents
---
pub mod devices {
    #[allow(unused_imports)]
    use drv_i2c_api::{Controller, I2cDevice, PortIndex};
    #[allow(unused_imports)]
    use userlib::TaskId;
    #[allow(dead_code)]
    #[allow(clippy::match_single_binding)]
    #[allow(unused_doc_comments)]
    pub fn device_by_index(task: TaskId, index: usize) -> Option<I2cDevice> {
        match index {
            #[doc = " Onboard temperature sensor"]
            0 => Some(I2cDevice::new(
                task,
                Controller::I2C4,
                PortIndex(0),
                None,
                0x48,
            )),
            #[doc = " FRU ID EEPROM"]
            1 => Some(I2cDevice::new(
                task,
                Controller::I2C2,
                PortIndex(0),
                None,
                0x50,
            )),
            #[doc = " PSU 0 EEPROM"]
            2 => Some(I2cDevice::new(
                task,
                Controller::I2C3,
                PortIndex(0),
                None,
                0x50,
            )),
            #[doc = " PSU 0 MCU"]
            3 => Some(I2cDevice::new(
                task,
                Controller::I2C3,
                PortIndex(0),
                None,
                0x58,
            )),
            #[doc = " PSU 1 EEPROM"]
            4 => Some(I2cDevice::new(
                task,
                Controller::I2C3,
                PortIndex(0),
                None,
                0x51,
            )),
            #[doc = " PSU 1 MCU"]
            5 => Some(I2cDevice::new(
                task,
                Controller::I2C3,
                PortIndex(0),
                None,
                0x59,
            )),
            #[doc = " PSU 2 EEPROM"]
            6 => Some(I2cDevice::new(
                task,
                Controller::I2C3,
                PortIndex(0),
                None,
                0x52,
            )),
            #[doc = " PSU 2 MCU"]
            7 => Some(I2cDevice::new(
                task,
                Controller::I2C3,
                PortIndex(0),
                None,
                0x5a,
            )),
            #[doc = " PSU 3 EEPROM"]
            8 => Some(I2cDevice::new(
                task,
                Controller::I2C3,
                PortIndex(0),
                None,
                0x53,
            )),
            #[doc = " PSU 3 MCU"]
            9 => Some(I2cDevice::new(
                task,
                Controller::I2C3,
                PortIndex(0),
                None,
                0x5b,
            )),
            #[doc = " PSU 4 EEPROM"]
            10 => Some(I2cDevice::new(
                task,
                Controller::I2C3,
                PortIndex(0),
                None,
                0x54,
            )),
            #[doc = " PSU 4 MCU"]
            11 => Some(I2cDevice::new(
                task,
                Controller::I2C3,
                PortIndex(0),
                None,
                0x5c,
            )),
            #[doc = " PSU 5 EEPROM"]
            12 => Some(I2cDevice::new(
                task,
                Controller::I2C3,
                PortIndex(0),
                None,
                0x55,
            )),
            #[doc = " PSU 5 MCU"]
            13 => Some(I2cDevice::new(
                task,
                Controller::I2C3,
                PortIndex(0),
                None,
                0x5d,
            )),
            _ => None,
        }
    }
    #[allow(dead_code)]
    #[allow(clippy::match_single_binding)]
    pub fn lookup_controller(index: usize) -> Option<Controller> {
        match index {
            1..=1 => Some(Controller::I2C2),
            2..=13 => Some(Controller::I2C3),
            0..=0 => Some(Controller::I2C4),
            _ => None,
        }
    }
    #[allow(dead_code)]
    #[allow(clippy::match_single_binding)]
    pub fn lookup_port(index: usize) -> Option<PortIndex> {
        match index {
            0..=13 => Some(PortIndex(0)),
            _ => None,
        }
    }
    #[doc = " FRU ID EEPROM"]
    #[allow(dead_code)]
    pub fn at24csw080(task: TaskId) -> [I2cDevice; 1] {
        [I2cDevice::new(
            task,
            Controller::I2C2,
            PortIndex(0),
            None,
            0x50,
        )]
    }
    #[doc = " PSU 0 EEPROM"]
    #[doc = " PSU 1 EEPROM"]
    #[doc = " PSU 2 EEPROM"]
    #[doc = " PSU 3 EEPROM"]
    #[doc = " PSU 4 EEPROM"]
    #[doc = " PSU 5 EEPROM"]
    #[allow(dead_code)]
    pub fn m24c02(task: TaskId) -> [I2cDevice; 6] {
        [
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x50),
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x51),
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x52),
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x53),
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x54),
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x55),
        ]
    }
    #[doc = " PSU 0 MCU"]
    #[doc = " PSU 1 MCU"]
    #[doc = " PSU 2 MCU"]
    #[doc = " PSU 3 MCU"]
    #[doc = " PSU 4 MCU"]
    #[doc = " PSU 5 MCU"]
    #[allow(dead_code)]
    pub fn mwocp67(task: TaskId) -> [I2cDevice; 6] {
        [
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x58),
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x59),
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x5a),
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x5b),
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x5c),
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x5d),
        ]
    }
    #[doc = " Onboard temperature sensor"]
    #[allow(dead_code)]
    pub fn tmp117(task: TaskId) -> [I2cDevice; 1] {
        [I2cDevice::new(
            task,
            Controller::I2C4,
            PortIndex(0),
            None,
            0x48,
        )]
    }
    #[doc = " FRU ID EEPROM"]
    #[allow(dead_code)]
    pub fn at24csw080_local(task: TaskId) -> [I2cDevice; 1] {
        [I2cDevice::new(
            task,
            Controller::I2C2,
            PortIndex(0),
            None,
            0x50,
        )]
    }
    #[doc = " PSU 0 EEPROM"]
    #[doc = " PSU 1 EEPROM"]
    #[doc = " PSU 2 EEPROM"]
    #[doc = " PSU 3 EEPROM"]
    #[doc = " PSU 4 EEPROM"]
    #[doc = " PSU 5 EEPROM"]
    #[allow(dead_code)]
    pub fn m24c02_backplane(task: TaskId) -> [I2cDevice; 6] {
        [
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x50),
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x51),
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x52),
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x53),
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x54),
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x55),
        ]
    }
    #[doc = " PSU 0 MCU"]
    #[doc = " PSU 1 MCU"]
    #[doc = " PSU 2 MCU"]
    #[doc = " PSU 3 MCU"]
    #[doc = " PSU 4 MCU"]
    #[doc = " PSU 5 MCU"]
    #[allow(dead_code)]
    pub fn mwocp67_backplane(task: TaskId) -> [I2cDevice; 6] {
        [
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x58),
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x59),
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x5a),
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x5b),
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x5c),
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x5d),
        ]
    }
    #[doc = " Onboard temperature sensor"]
    #[allow(dead_code)]
    pub fn tmp117_temp(task: TaskId) -> [I2cDevice; 1] {
        [I2cDevice::new(
            task,
            Controller::I2C4,
            PortIndex(0),
            None,
            0x48,
        )]
    }
    #[doc = " FRU ID EEPROM"]
    #[allow(dead_code)]
    pub fn at24csw080_local_vpd(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C2, PortIndex(0), None, 0x50)
    }
    #[doc = " PSU 0 EEPROM"]
    #[allow(dead_code)]
    pub fn m24c02_psu0eeprom(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x50)
    }
    #[doc = " PSU 1 EEPROM"]
    #[allow(dead_code)]
    pub fn m24c02_psu1eeprom(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x51)
    }
    #[doc = " PSU 2 EEPROM"]
    #[allow(dead_code)]
    pub fn m24c02_psu2eeprom(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x52)
    }
    #[doc = " PSU 3 EEPROM"]
    #[allow(dead_code)]
    pub fn m24c02_psu3eeprom(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x53)
    }
    #[doc = " PSU 4 EEPROM"]
    #[allow(dead_code)]
    pub fn m24c02_psu4eeprom(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x54)
    }
    #[doc = " PSU 5 EEPROM"]
    #[allow(dead_code)]
    pub fn m24c02_psu5eeprom(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x55)
    }
    #[doc = " PSU 0 MCU"]
    #[allow(dead_code)]
    pub fn mwocp67_psu0mcu(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x58)
    }
    #[doc = " PSU 1 MCU"]
    #[allow(dead_code)]
    pub fn mwocp67_psu1mcu(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x59)
    }
    #[doc = " PSU 2 MCU"]
    #[allow(dead_code)]
    pub fn mwocp67_psu2mcu(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x5a)
    }
    #[doc = " PSU 3 MCU"]
    #[allow(dead_code)]
    pub fn mwocp67_psu3mcu(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x5b)
    }
    #[doc = " PSU 4 MCU"]
    #[allow(dead_code)]
    pub fn mwocp67_psu4mcu(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x5c)
    }
    #[doc = " PSU 5 MCU"]
    #[allow(dead_code)]
    pub fn mwocp67_psu5mcu(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x5d)
    }
    #[doc = " Onboard temperature sensor"]
    #[allow(dead_code)]
    pub fn tmp117_onboard(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C4, PortIndex(0), None, 0x48)
    }
    #[doc = " FRU ID EEPROM"]
    #[allow(dead_code)]
    pub fn at24csw080_u27(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C2, PortIndex(0), None, 0x50)
    }
    #[doc = " PSU 0 EEPROM"]
    #[allow(dead_code)]
    pub fn m24c02_psu0_id(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x50)
    }
    #[doc = " PSU 1 EEPROM"]
    #[allow(dead_code)]
    pub fn m24c02_psu1_id(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x51)
    }
    #[doc = " PSU 2 EEPROM"]
    #[allow(dead_code)]
    pub fn m24c02_psu2_id(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x52)
    }
    #[doc = " PSU 3 EEPROM"]
    #[allow(dead_code)]
    pub fn m24c02_psu3_id(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x53)
    }
    #[doc = " PSU 4 EEPROM"]
    #[allow(dead_code)]
    pub fn m24c02_psu4_id(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x54)
    }
    #[doc = " PSU 5 EEPROM"]
    #[allow(dead_code)]
    pub fn m24c02_psu5_id(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x55)
    }
    #[doc = " PSU 0 MCU"]
    #[allow(dead_code)]
    pub fn mwocp67_psu0(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x58)
    }
    #[doc = " PSU 1 MCU"]
    #[allow(dead_code)]
    pub fn mwocp67_psu1(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x59)
    }
    #[doc = " PSU 2 MCU"]
    #[allow(dead_code)]
    pub fn mwocp67_psu2(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x5a)
    }
    #[doc = " PSU 3 MCU"]
    #[allow(dead_code)]
    pub fn mwocp67_psu3(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x5b)
    }
    #[doc = " PSU 4 MCU"]
    #[allow(dead_code)]
    pub fn mwocp67_psu4(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x5c)
    }
    #[doc = " PSU 5 MCU"]
    #[allow(dead_code)]
    pub fn mwocp67_psu5(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x5d)
    }
    #[doc = " Onboard temperature sensor"]
    #[allow(dead_code)]
    pub fn tmp117_u29(task: TaskId) -> I2cDevice {
        I2cDevice::new(task, Controller::I2C4, PortIndex(0), None, 0x48)
    }
}
pub mod pmbus {
    use drv_i2c_api::{Controller, I2cDevice, PortIndex};
    use userlib::TaskId;
    #[doc = " PSU 0 MCU"]
    #[allow(dead_code)]
    pub fn v50_psu0(task: TaskId) -> (I2cDevice, Option<u8>) {
        (
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x58),
            None,
        )
    }
    #[allow(dead_code)]
    pub const MWOCP67_V50_PSU0_PHASES: Option<&'static [u8]> = None;
    #[doc = " PSU 1 MCU"]
    #[allow(dead_code)]
    pub fn v50_psu1(task: TaskId) -> (I2cDevice, Option<u8>) {
        (
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x59),
            None,
        )
    }
    #[allow(dead_code)]
    pub const MWOCP67_V50_PSU1_PHASES: Option<&'static [u8]> = None;
    #[doc = " PSU 2 MCU"]
    #[allow(dead_code)]
    pub fn v50_psu2(task: TaskId) -> (I2cDevice, Option<u8>) {
        (
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x5a),
            None,
        )
    }
    #[allow(dead_code)]
    pub const MWOCP67_V50_PSU2_PHASES: Option<&'static [u8]> = None;
    #[doc = " PSU 3 MCU"]
    #[allow(dead_code)]
    pub fn v50_psu3(task: TaskId) -> (I2cDevice, Option<u8>) {
        (
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x5b),
            None,
        )
    }
    #[allow(dead_code)]
    pub const MWOCP67_V50_PSU3_PHASES: Option<&'static [u8]> = None;
    #[doc = " PSU 4 MCU"]
    #[allow(dead_code)]
    pub fn v50_psu4(task: TaskId) -> (I2cDevice, Option<u8>) {
        (
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x5c),
            None,
        )
    }
    #[allow(dead_code)]
    pub const MWOCP67_V50_PSU4_PHASES: Option<&'static [u8]> = None;
    #[doc = " PSU 5 MCU"]
    #[allow(dead_code)]
    pub fn v50_psu5(task: TaskId) -> (I2cDevice, Option<u8>) {
        (
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x5d),
            None,
        )
    }
    #[allow(dead_code)]
    pub const MWOCP67_V50_PSU5_PHASES: Option<&'static [u8]> = None;
}
