build/xtask/tests/snapshots/i2c_codegen__app_observer_rev-a-dev.toml.ports-Target.snap
---
source: build/xtask/tests/i2c-codegen.rs
expression: contents
---
pub mod ports {
    #[allow(dead_code)]
    pub const fn i2c2_f() -> drv_i2c_api::PortIndex {
        drv_i2c_api::PortIndex(0)
    }
    #[allow(dead_code)]
    pub const fn i2c3_h() -> drv_i2c_api::PortIndex {
        drv_i2c_api::PortIndex(0)
    }
    #[allow(dead_code)]
    pub const fn i2c4_f() -> drv_i2c_api::PortIndex {
        drv_i2c_api::PortIndex(0)
    }
}
