build/xtask/tests/snapshots/i2c_codegen__app_observer_rev-a-dev.toml.sensor-id-to-component-id-Sensors.snap
---
source: build/xtask/tests/i2c-codegen.rs
expression: contents
---
pub const MAX_SENSOR_COMPONENT_ID_LEN: usize = 4;
pub const SENSOR_ID_TO_COMPONENT_ID: [fixedstr::FixedStr<
    'static,
    MAX_SENSOR_COMPONENT_ID_LEN,
>; 61] = [
    fixedstr::FixedStr::from_str("U29"),
    fixedstr::FixedStr::from_str("PSU0"),
    fixedstr::FixedStr::from_str("PSU0"),
    fixedstr::FixedStr::from_str("PSU0"),
    fixedstr::FixedStr::from_str("PSU0"),
    fixedstr::FixedStr::from_str("PSU0"),
    fixedstr::FixedStr::from_str("PSU0"),
    fixedstr::FixedStr::from_str("PSU0"),
    fixedstr::FixedStr::from_str("PSU0"),
    fixedstr::FixedStr::from_str("PSU0"),
    fixedstr::FixedStr::from_str("PSU0"),
    fixedstr::FixedStr::from_str("PSU1"),
    fixedstr::FixedStr::from_str("PSU1"),
    fixedstr::FixedStr::from_str("PSU1"),
    fixedstr::FixedStr::from_str("PSU1"),
    fixedstr::FixedStr::from_str("PSU1"),
    fixedstr::FixedStr::from_str("PSU1"),
    fixedstr::FixedStr::from_str("PSU1"),
    fixedstr::FixedStr::from_str("PSU1"),
    fixedstr::FixedStr::from_str("PSU1"),
    fixedstr::FixedStr::from_str("PSU1"),
    fixedstr::FixedStr::from_str("PSU2"),
    fixedstr::FixedStr::from_str("PSU2"),
    fixedstr::FixedStr::from_str("PSU2"),
    fixedstr::FixedStr::from_str("PSU2"),
    fixedstr::FixedStr::from_str("PSU2"),
    fixedstr::FixedStr::from_str("PSU2"),
    fixedstr::FixedStr::from_str("PSU2"),
    fixedstr::FixedStr::from_str("PSU2"),
    fixedstr::FixedStr::from_str("PSU2"),
    fixedstr::FixedStr::from_str("PSU2"),
    fixedstr::FixedStr::from_str("PSU3"),
    fixedstr::FixedStr::from_str("PSU3"),
    fixedstr::FixedStr::from_str("PSU3"),
    fixedstr::FixedStr::from_str("PSU3"),
    fixedstr::FixedStr::from_str("PSU3"),
    fixedstr::FixedStr::from_str("PSU3"),
    fixedstr::FixedStr::from_str("PSU3"),
    fixedstr::FixedStr::from_str("PSU3"),
    fixedstr::FixedStr::from_str("PSU3"),
    fixedstr::FixedStr::from_str("PSU3"),
    fixedstr::FixedStr::from_str("PSU4"),
    fixedstr::FixedStr::from_str("PSU4"),
    fixedstr::FixedStr::from_str("PSU4"),
    fixedstr::FixedStr::from_str("PSU4"),
    fixedstr::FixedStr::from_str("PSU4"),
    fixedstr::FixedStr::from_str("PSU4"),
    fixedstr::FixedStr::from_str("PSU4"),
    fixedstr::FixedStr::from_str("PSU4"),
    fixedstr::FixedStr::from_str("PSU4"),
    fixedstr::FixedStr::from_str("PSU4"),
    fixedstr::FixedStr::from_str("PSU5"),
    fixedstr::FixedStr::from_str("PSU5"),
    fixedstr::FixedStr::from_str("PSU5"),
    fixedstr::FixedStr::from_str("PSU5"),
    fixedstr::FixedStr::from_str("PSU5"),
    fixedstr::FixedStr::from_str("PSU5"),
    fixedstr::FixedStr::from_str("PSU5"),
    fixedstr::FixedStr::from_str("PSU5"),
    fixedstr::FixedStr::from_str("PSU5"),
    fixedstr::FixedStr::from_str("PSU5"),
];
