build/xtask/tests/snapshots/i2c_codegen__app_observer_rev-a-dev.toml.sensor-id-to-name-Sensors.snap
---
source: build/xtask/tests/i2c-codegen.rs
expression: contents
---
pub const MAX_SENSOR_NAME_LEN: usize = 8;
pub const SENSOR_ID_TO_NAME: [fixedstr::FixedStr<
    'static,
    MAX_SENSOR_NAME_LEN,
>; 61] = [
    fixedstr::FixedStr::from_str("onboard"),
    fixedstr::FixedStr::from_str("psu0mcu"),
    fixedstr::FixedStr::from_str("psu0mcu"),
    fixedstr::FixedStr::from_str("psu0mcu"),
    fixedstr::FixedStr::from_str("psu0mcu"),
    fixedstr::FixedStr::from_str("psu0mcu"),
    fixedstr::FixedStr::from_str("V50_PSU0"),
    fixedstr::FixedStr::from_str("V50_PSU0"),
    fixedstr::FixedStr::from_str("V50_PSU0"),
    fixedstr::FixedStr::from_str("V50_PSU0"),
    fixedstr::FixedStr::from_str("psu0mcu"),
    fixedstr::FixedStr::from_str("psu1mcu"),
    fixedstr::FixedStr::from_str("psu1mcu"),
    fixedstr::FixedStr::from_str("psu1mcu"),
    fixedstr::FixedStr::from_str("psu1mcu"),
    fixedstr::FixedStr::from_str("psu1mcu"),
    fixedstr::FixedStr::from_str("V50_PSU1"),
    fixedstr::FixedStr::from_str("V50_PSU1"),
    fixedstr::FixedStr::from_str("V50_PSU1"),
    fixedstr::FixedStr::from_str("V50_PSU1"),
    fixedstr::FixedStr::from_str("psu1mcu"),
    fixedstr::FixedStr::from_str("psu2mcu"),
    fixedstr::FixedStr::from_str("psu2mcu"),
    fixedstr::FixedStr::from_str("psu2mcu"),
    fixedstr::FixedStr::from_str("psu2mcu"),
    fixedstr::FixedStr::from_str("psu2mcu"),
    fixedstr::FixedStr::from_str("V50_PSU2"),
    fixedstr::FixedStr::from_str("V50_PSU2"),
    fixedstr::FixedStr::from_str("V50_PSU2"),
    fixedstr::FixedStr::from_str("V50_PSU2"),
    fixedstr::FixedStr::from_str("psu2mcu"),
    fixedstr::FixedStr::from_str("psu3mcu"),
    fixedstr::FixedStr::from_str("psu3mcu"),
    fixedstr::FixedStr::from_str("psu3mcu"),
    fixedstr::FixedStr::from_str("psu3mcu"),
    fixedstr::FixedStr::from_str("psu3mcu"),
    fixedstr::FixedStr::from_str("V50_PSU3"),
    fixedstr::FixedStr::from_str("V50_PSU3"),
    fixedstr::FixedStr::from_str("V50_PSU3"),
    fixedstr::FixedStr::from_str("V50_PSU3"),
    fixedstr::FixedStr::from_str("psu3mcu"),
    fixedstr::FixedStr::from_str("psu4mcu"),
    fixedstr::FixedStr::from_str("psu4mcu"),
    fixedstr::FixedStr::from_str("psu4mcu"),
    fixedstr::FixedStr::from_str("psu4mcu"),
    fixedstr::FixedStr::from_str("psu4mcu"),
    fixedstr::FixedStr::from_str("V50_PSU4"),
    fixedstr::FixedStr::from_str("V50_PSU4"),
    fixedstr::FixedStr::from_str("V50_PSU4"),
    fixedstr::FixedStr::from_str("V50_PSU4"),
    fixedstr::FixedStr::from_str("psu4mcu"),
    fixedstr::FixedStr::from_str("psu5mcu"),
    fixedstr::FixedStr::from_str("psu5mcu"),
    fixedstr::FixedStr::from_str("psu5mcu"),
    fixedstr::FixedStr::from_str("psu5mcu"),
    fixedstr::FixedStr::from_str("psu5mcu"),
    fixedstr::FixedStr::from_str("V50_PSU5"),
    fixedstr::FixedStr::from_str("V50_PSU5"),
    fixedstr::FixedStr::from_str("V50_PSU5"),
    fixedstr::FixedStr::from_str("V50_PSU5"),
    fixedstr::FixedStr::from_str("psu5mcu"),
];
