build/xtask/tests/snapshots/i2c_codegen__app_psc_rev-c-dev.toml.codegen-Target.snap
---
source: build/xtask/tests/i2c-codegen.rs
expression: "format!(\"ERROR: {e:#}\")"
---
ERROR: found 0 I2C controller(s); expected exactly one
